evaluation/rq1/sota/mythril/execution_logs/0x0xde################################f95ab_bsc.txt
mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0xde################################f95ab_bsc/FUTURE.sol:312:5: SyntaxError: No visibility specified. Did you intend to add "public"?
    constructor () {
    ^ (Relevant source part starts here and spans across multiple lines).

